# dl-framework

./: .gitignore  LICENSE  README.md  experiment.py  requirements.txt  setup.cfg
build_docs/: autogen.py  mkdocs.yml
config/: config.yml  config_centernet.yml  config_cycle_gan.yml  config_simclr.yml  config_ssd.yml
dlf/callbacks/: gan_logger.py  object_detection_logger.py  segmentation_logger.py  tensorboard_logger.py
dlf/core/: __init__.py  builder.py  callback.py  data_generator.py  evaluator.py  experiment.py  model.py  preprocessing.py  registry.py
dlf/data_generators/: fs_imagenet_like_reader.py  fs_pair_reader.py  tf_record_object_detection_reader.py  tf_record_segmentation_reader.py
dlf/evaluators/: coco_object_detection.py
dlf/layers/: centernet_detections.py  l2_normalization.py
dlf/losses/: centernet_loss.py  ntxent_loss.py  sparse_categorial_crossentropy_ignore.py  ssd_loss.py
dlf/metrics/: __init__.py  sparse_categorial_crossentropy_ignore.py  sparse_mean_iou.py
dlf/models/: __init__.py  centernet.py  cycle_gan.py  deeplabl_v3_plus.py  fcn.py  feature_extractor.py  simclr.py  ssd.py  utils.py  vgg_encoder_decoder.py
dlf/preprocessing/: blur.py  brightness.py  color_distortion.py  crop.py  fisheye.py  flip.py  hue.py  noise.py  resize.py  saturation.py  transform.py
dlf/utils/: box_utils.py  helpers.py  keypoint_utils.py  scores.py  visualization.py
docs/: autogen.py  autogen.yml  index.html  sitemap.xml
docs/search/: search_index.json
docs/site/: 404.html
tests/: __init__.py
tests/data_generators/: test_fs_pair_reader.py
(+53 files in other folders)
