[metadata]
name = dlf
version = 0.0
description = Deep learning framework
author = Tobias Scheck

[options]
python_requires = >=3.5
packages = find:
install_requires =
    matplotlib>=3.0.3
    numpy>=1.18.2,<1.19.0
    Pillow>=6.2.1
    protobuf>=3.10.0
    PyYAML>=5.1.2
    tensorflow>=2.3.0
    tensorflow_probability>=0.9.0
    tensorboard>=2.2.0
    tensorflow_addons>=0.9.0
    tqdm>=4.31.1
    Cython>=0.29.16
    pycocotools;platform_system!="Windows"
    pycocotools-windows;platform_system=="Windows"

[options.packages.find]
exclude =
    test*
